= MagLev Change Log

== Unreleased Changes

* Turn on ri and rdoc for RubyGems.  RubyGems 1.3.6 installs cleanly now.
* Ruby version is now 1.8.7 .
* Fix Trac 646, 672, 676, 677

== Changes for 22985  2010-03-09

* Add callback to Module#append_features
* Fixes and enhancements for underlying GemStone stats
  Added: 
    PermGenFullCount - Number of times the perm gen space was found to be full.
    CodeGenFullCount - Number of times the code gen space was found to be full.
    OldGenFullCount - Number of times the old gen space was found to be full.
    VoteOnDeadCount -  Number of times the session has voted on dead objects.
    ScavsPromToMkSwCount - Number of times a scavenge operation was promoted 
      to a Mark/Sweep operation.
    LastMarkSweepReasonCode - An internal code which indicates the reason for
      the last Mark/Sweep operation.
    LastScavengeReasonCode - An internal code which indicates the reason for 
      the last scavenge operation.
* Changed the index search method from 'select' to 'search'
  to avoid conflict with Enumerable#select.

== Changes for 22949  2010-03-02

* Fix Trac 669, 670, 671, 673
* Miscellaneous cleanup of examples
* YAML: Use FFI callbacks for IO
* A few underlying changes/bugfixes in GemStone

== Changes for 22932  2010-02-27

* Change back to 1.8.6 for at least one more build

== Changes for 22923  2010-02-26

* Changing base version from 1.8.6 to 1.8.7 so we can begin 1.8.7 work
* Fixed problem preventing update to RubyGems 1.3.6
* Fixed problem on Mac with FFI callout/callin that caused YAML crashes

== Changes for 22907  2010-02-24

* in FFI implement callback , implement C float args .
* parser warnings  now controlled by -W, -w, -VERBOSE flags ,
  but are always printed of a SyntaxError occurs.
* Merged latest updates of psych into MagLev
* Add Symbol#to_proc

== Changes for 22891  2010-02-18

* Switch from RbYaml to libyaml + Psych
* Fix Trac 610, 640, 662, 663, 664, 665, 666