@@ -34,7 +34,7 @@ Benchmark.bm do |x|
   }
 
   x.report("Find the youngsters") {
-    youngsters = people.search([:age], :<, 25)
+    youngsters = people.search([:age], :lt, 25)
   }
   puts "Found #{youngsters.length} youngsters"
 
@@ -42,9 +42,9 @@ Benchmark.bm do |x|
   # field (marital_status).  We then intersect the sets to get the result
   old_hermits = nil
   x.report("Find old hermits") {
-    old_ones = people.search([:age], :>=, 75)
-    hermits  = people.search([:marital_status], :==, :hermit)
-    old_hermits = hermits * old_ones
+    old_ones = people.search([:age], :gte, 75)
+    hermits  = people.search([:marital_status], :eql, :hermit)
+    old_hermits = hermits & old_ones
   }
 
   # print some old hermits
@@ -64,9 +64,9 @@ Benchmark.bm do |x|
   puts "="*20, " Some lucrative youngsters...", "="*20
   lucrative_youngsters = nil
   x.report("Youngsters in 45678") {
-    young_ones = people.search([:age], :<, 26)
-    lucrative  = people.search([:address, :zip], :==, 45678)
-    lucrative_youngsters = young_ones * lucrative
+    young_ones = people.search([:age], :lte, 25)
+    lucrative  = people.search([:address, :zip], :eql, 45678)
+    lucrative_youngsters = young_ones & lucrative
   }
   count = 0
   lucrative_youngsters.each do |h|
