@@ -2,6 +2,7 @@
 
 == Unreleased Changes
 
+* Changed operator names for Indexed search.  See IdentitySet#search for doc.
 * Turn on ri and rdoc for RubyGems.  RubyGems 1.3.6 installs cleanly now.
 * Ruby version is now 1.8.7 .
 * Fix Trac 646, 672, 676, 677
